Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.11.3, 5.15.1, 5.15.7
-
Fix Version/s: 5.15.8, 6.2.3, 6.3.0 Alpha
-
Component/s: Quick: 2D Renderer
-
Environment:Virtual (VMWare) Ubuntu x64 18.04 @XFCE, gcc 7.5.0, Ubuntu x64 20.04 @ Gnome, gcc 9.3.0 -- or -- TI AM335x running Yocto "thud"
-
Platform/s:
-
Commits:bda75c81f5648a4f1f2d15b4efaf38a03d5f0d64 (qt/qtbase/dev) 46599ec4182191937743d92b58dc0c3e60ccf77f (qt/qtbase/6.2) a948c725e5 (qt/tqtc-qtbase/5.15)
Description
Hi, I discovered a problem while resizing a text element. At a certain size, one or more random characters from the label disappear. Please see the attached video for the minimal example.
The code of the minimal example:
import QtQuick 2.11 import QtQuick.Window 2.11 import QtQuick.Controls 2.4 Window { visible: true width: 800 height: 480 title: qsTr("Hello World") Text { id: text1 text: "TEXT" renderType: Text.NativeRendering x: 50 y: 50 font.pointSize: 22 // Happens with both pointSize and pixelSize } Button { id: increase y: 400 x: 400 text: "INCREASE" renderType: Text.NativeRendering onClicked: text1.font.pointSize = text1.font.pointSize + 1 } Button { id: decrease y: 400 text: "DECREASE" onClicked: text1.font.pointSize = text1.font.pointSize - 1 } }